force-app/main/default/objects/Bank_Account__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debit</label>
    <type>Checkbox</type>
</CustomField>