force-app/main/default/objects/Bank_Account__c/recordTypes/Perecharla.recordType-meta.xml
<RecordType>
    <fullName>Perecharla</fullName>
    <active>true</active>
    <label>Perecharla</label>
</RecordType>