force-app/main/default/objects/Bank_Account__c/recordTypes/Satenapalli.recordType-meta.xml
<RecordType>
    <fullName>Satenapalli</fullName>
    <active>true</active>
    <label>Satenapalli</label>
</RecordType>