force-app/main/default/objects/Bank_Account__c/validationRules/Credit_Debit_Not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Debit_Not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Credit__c , Debit__c )</errorConditionFormula>
    <errorMessage>Please contact admin you couldn&apos;t perform credit and debit at a time</errorMessage>
</ValidationRule>